# metal-analyzer

./: .gitignore  Cargo.toml  README.md  setup.sh
crates/metal-analyzer/: Cargo.toml
crates/metal-analyzer/benches/: goto_navigation.rs
crates/metal-analyzer/src/: config.rs  lib.rs  main.rs  progress.rs  text_pos.rs
crates/metal-analyzer/src/completion/: builtins.rs  context.rs  mod.rs  provider.rs
crates/metal-analyzer/src/config/: compiler.rs  diagnostics.rs  formatting.rs  indexing.rs  logging.rs  mod.rs  schema.rs  thread_pool.rs
crates/metal-analyzer/src/definition/: ast_index.rs  clang_nodes.rs  compiler.rs  fallback_lookup.rs  index_cache.rs  indexer.rs  mod.rs  perf.rs  precise_lookup.rs  project_graph.rs  project_index.rs  provider.rs  ref_site.rs  symbol_def.rs  symbol_rank.rs  symbol_text.rs  system_lookup.rs  utils.rs
crates/metal-analyzer/src/document/: document_store.rs  mod.rs  text_document.rs
crates/metal-analyzer/src/hover/: attribute.rs  builtins.rs  mod.rs  provider.rs  user_symbol.rs
crates/metal-analyzer/src/ide/: lsp.rs  mod.rs  navigation.rs
crates/metal-analyzer/src/metal/: compiler.rs  mod.rs
crates/metal-analyzer/src/metal/builtins/: database.rs  functions.rs  keywords.rs  mod.rs  types.rs
crates/metal-analyzer/src/semantic_tokens/: ast_tokens.rs  mapping.rs  mod.rs  provider.rs  syntactic.rs
crates/metal-analyzer/src/server/: diagnostics.rs  formatting.rs  handler.rs  header_owners.rs  metalfmt.rs  mod.rs  settings.rs  state.rs
crates/metal-analyzer/src/symbols/: index.rs  mod.rs  provider.rs  scanner.rs  types.rs
crates/metal-analyzer/src/syntax/: ast.rs  cst.rs  cst_parser.rs  helpers.rs  kind.rs  lexer.rs  mod.rs  queries.rs
crates/metal-analyzer/src/vfs/: mod.rs
crates/metal-analyzer/tests/: completion_semantic_workflow_tests.rs  completion_tests.rs  definition_exhaustive.rs  definition_integration.rs  definition_tests.rs  hover_tests.rs  lsp_lifecycle_diagnostics_tests.rs  lsp_navigation_tests.rs  navigation_diagnostics_tests.rs  references_rename_hover_symbol_tests.rs  scenario_matrix_tests.rs  semantic_tokens_tests.rs  symbol_tests.rs
crates/metal-analyzer/tests/common/: mod.rs
crates/metal-analyzer/tests/definition/: indexer_tests.rs
crates/metal-analyzer/tests/fixtures/: ambiguous_overload.metal  functions.metal  macro_calls.metal  missing_include.metal  types.metal
crates/metal-analyzer/tests/fixtures/corpus_cases/common/: broken_header.h  defines.h  math_ops.h  types.h  utils.h
crates/metal-analyzer/tests/fixtures/corpus_cases/matmul/common/: loader.h  operators.h  problematic_owner_only.h  template_math.h  transforms.h
crates/metal-analyzer/tests/fixtures/corpus_cases/matmul/common/steel/: utils.h
crates/metal-analyzer/tests/fixtures/corpus_cases/matmul/gemv/shaders/: ambiguous_loader_include.metal  deep_include_error.metal  gemv_like.metal  loader.h  owner_context.metal  ref_user_a.metal  (+1 more)
crates/metal-analyzer/tests/src/: progress_tests.rs
crates/metal-analyzer/tests/src/definition/: compiler_tests.rs  index_cache_tests.rs  provider_tests.rs
crates/metal-analyzer/tests/src/document/: document_store_tests.rs  text_document_tests.rs
crates/metal-analyzer/tests/src/metal/: builtins_tests.rs  compiler_tests.rs
crates/metal-analyzer/tests/src/server/: diagnostics_tests.rs  formatting_tests.rs  header_owners_tests.rs  metalfmt_tests.rs  settings_tests.rs
crates/metal-analyzer/tests/src/syntax/: cst_parser_tests.rs  helpers_tests.rs  lexer_tests.rs
(+37 files in other folders)
